@@ -6,14 +6,14 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import ru.yandex.practicum.filmorate.customvalidation.customvalidators.UserEmailAndNameValidator;
 import ru.yandex.practicum.filmorate.exception.UserValidationException;
-import ru.yandex.practicum.filmorate.model.UserModel;
+import ru.yandex.practicum.filmorate.model.domain.User;
 
 import java.time.LocalDate;
 import java.util.Collections;
 import java.util.List;
 
 public class UserlEmailAndNameValidatorTest {
-    private static UserModel userModel = UserModel.builder()
+    private static User user = User.builder()
             .id(0)
             .email("sexmaster96@gmail.com")
             .login("tecktonick_killer")
@@ -23,53 +23,43 @@ public class UserlEmailAndNameValidatorTest {
 
     @Test
     public void shouldCheckValidUserWithEmptyEmailListAndListWithoutDuplicates() {
-        UserEmailAndNameValidator.checkUserBeforeSaving(userModel, Collections.emptyList());
-        UserEmailAndNameValidator.checkUserBeforeSaving(userModel, List.of(
-                UserModel.builder().id(1).email("sexmaster97@gmail.com").login("tecktonick_killer").name("Владимир")
-                        .birthday(LocalDate.of(1996, 12, 12)).build(),
-                UserModel.builder().id(2).email("sosiska").login("tecktonick_killer").name("Владимир")
-                        .birthday(LocalDate.of(1996, 12, 12)).build(),
-                UserModel.builder().id(3).email("sugaronsand@yandex.ru").login("tecktonick_killer").name("Владимир")
-                        .birthday(LocalDate.of(1996, 12, 12)).build()));
+        UserEmailAndNameValidator.checkUserBeforeSaving(user, Collections.emptyList());
+        UserEmailAndNameValidator.checkUserBeforeSaving(user, List.of(
+                "sexmaster97@gmail.com", "sosiska", "sugaronsand@yandex.ru"));
     }
 
     @Test
     public void shouldThrowExceptionWhenCheckWithListWithDuplicates() {
-        assertThrows(UserValidationException.class, () -> UserEmailAndNameValidator.checkUserBeforeSaving(userModel, List.of(
-                UserModel.builder().id(1).email("sexmaster97@gmail.com").login("tecktonick_killer").name("Владимир")
-                        .birthday(LocalDate.of(1996, 12, 12)).build(),
-                UserModel.builder().id(2).email("sexmaster96@gmail.com").login("tecktonick_killer").name("Владимир")
-                        .birthday(LocalDate.of(1996, 12, 12)).build(),
-                UserModel.builder().id(3).email("sugaronsand@yandex.ru").login("tecktonick_killer").name("Владимир")
-                        .birthday(LocalDate.of(1996, 12, 12)).build())));
+        assertThrows(UserValidationException.class, () -> UserEmailAndNameValidator.checkUserBeforeSaving(user, List.of(
+                "sexmaster97@gmail.com", "sexmaster96@gmail.com", "sugaronsand@yandex.ru")));
     }
 
     @Test
     public void shouldReturnPreviousUserWhenCheckNotNullAndNotBlankName() {
-        UserModel checkedUserModel = UserEmailAndNameValidator.getUserWithCheckedName(userModel);
-        assertEquals(userModel, checkedUserModel);
+        User checkedUser = UserEmailAndNameValidator.getUserWithCheckedName(user);
+        assertEquals(user, checkedUser);
     }
 
     @Test
     public void shouldReturnValidUserWhenCheckNullOrBlankName() {
-        UserModel userModel1 = userModel.toBuilder().name("").build();
-        UserModel userModel2 = userModel.toBuilder().name(" ").build();
-        UserModel userModel3 = userModel.toBuilder().name("\n\r\t").build();
-        UserModel userModel4 = UserModel.builder()
+        User user1 = user.toBuilder().name("").build();
+        User user2 = user.toBuilder().name(" ").build();
+        User user3 = user.toBuilder().name("\n\r\t").build();
+        User user4 = User.builder()
                 .id(0)
                 .email("sexmaster96@gmail.com")
                 .login("tecktonick_killer")
                 .birthday(LocalDate.of(1996, 12, 12))
                 .build();
-        userModel1 = UserEmailAndNameValidator.getUserWithCheckedName(userModel1);
-        userModel2 = UserEmailAndNameValidator.getUserWithCheckedName(userModel2);
-        userModel3 = UserEmailAndNameValidator.getUserWithCheckedName(userModel3);
-        userModel4 = UserEmailAndNameValidator.getUserWithCheckedName(userModel4);
-        userModel = userModel.toBuilder().name(userModel.getLogin()).build();
-        assertEquals(userModel, userModel1);
-        assertEquals(userModel, userModel2);
-        assertEquals(userModel, userModel3);
-        assertEquals(userModel, userModel4);
+        user1 = UserEmailAndNameValidator.getUserWithCheckedName(user1);
+        user2 = UserEmailAndNameValidator.getUserWithCheckedName(user2);
+        user3 = UserEmailAndNameValidator.getUserWithCheckedName(user3);
+        user4 = UserEmailAndNameValidator.getUserWithCheckedName(user4);
+        user = user.toBuilder().name(user.getLogin()).build();
+        assertEquals(user, user1);
+        assertEquals(user, user2);
+        assertEquals(user, user3);
+        assertEquals(user, user4);
     }
 
 }
